[#719] Add java 21 support in doc